# whats-on-the-menu

./: .gitignore  README.md  pyproject.toml
.cursor/rules/docs/: RULE.md
.github/workflows/: ci.yml
install/: install.sh  projects_menu.service
src/: app.py  config.py  datamodels.py  image_validation.py  values.py.example
src/services/: __init__.py  forex_service.py  image_search_brave.py  openai_service.py
static/css/: styles.css
static/js/: app.js
templates/: index.html
tests/: test_config.py  test_image_validation.py  test_openai_service.py  test_upload_handler.py
